# raytracing-experiment

./: .gitignore  CMakeLists.txt  README.md  colors.cpp  colors.h  geometry.cpp  geometry.h  main.cpp  renderer.cpp  renderer.h  vector3.cpp  vector3.h  vectors.cpp  vectors.h
src/: CMakeLists.txt  main.cpp
src/Base/: CMakeLists.txt  Colors.cpp  Colors.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Vector3.cpp  Vector3.h
src/Math/: CMakeLists.txt  Geometry.cpp  Geometry.h  Vector3.cpp
src/Render/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Tests/: CMakeLists.txt  Gradient_UnitTest.cpp  Lighting_UnitTest.cpp  MultipleSpheres_UnitTest.cpp  SingleSphere_UnitTest.cpp
